reactDashboard/src/components/DashboardNavbar/DashboardNavbar.css
.darkmode-btn,
.darkmode-btn-toggle {
  background-color: #287db2;
  border-radius: 50%;
  height: 100%;
  width: 100%;
  padding: 10px;
  font-size: 50px;
  margin: auto 0 10px auto;
}

.darkmode-btn {
  display: block;
}

.darkmode-btn:hover,
.darkmode-btn-toggle:hover {
  background-color: #c1def1;
  cursor: pointer;
}

.darkmode .darkmode-btn,
.darkmode .darkmode-btn-toggle {
  color: #fd8d3c;
  background-color: #121212;
}

.darkmode .darkmode-btn:hover,
.darkmode .darkmode-btn-toggle:hover {
  color: #121212;
  background-color: #fd8d3c;
}

.hide-darkmode .darkmode-btn-toggle {
  display: none;
}

@media screen and (max-width: 575px) {
  .hide-darkmode .darkmode-btn-toggle {
    display: block;
  }
  .darkmode-btn {
    display: none;
  }
}

.hide-darkmode {
  display: flex;
  flex-direction: row;
}

.navbar-links {
  margin-right: 0;
  margin-bottom: 0;
}

.nav-link {
  font-size: 1em;
  width: 180px;
  padding-top: 10px;
  margin-top: 10px;
  padding-bottom: 20px;
  text-align: center;
  font-weight: bold;
}

.navbar-links a.nav-link:hover {
  text-decoration: underline;
  color: #121212;
}

.navbar-links a.nav-link.selected {
  color: #121212;
  background-color: #f2f2f2;
  text-decoration: none;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
}

.darkmode .navbar-links a.nav-link.selected {
  background-color: #ffffff;
}

.dashboard-navbar img#logo {
  height: 60px;
  margin: 10px 10px 0 0;
  padding: 0;
}

.darkmode .dashboard-navbar img#logo {
  background-color: #f2f2f2;
}

.dashboard-navbar {
  margin: 0 15px;
  padding: 0 10px;
  background-color: #ffffff;
}

.darkmode .dashboard-navbar {
  background-color: #f2f2f2;
  opacity: 0.75;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
}

.dashboard-navbar .heading-container.collapse:not(.show) {
  display: none;
}

.dashboard-navbar .heading h1 {
  font-size: 2em;
  margin-bottom: 0;
}

.darkmode .dashboard-navbar .heading h1 {
  color: #121212;
}

.navbar {
  align-items: center;
}

.dashboard-navbar .heading-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding-right: 20px;
}

.dashboard-navbar .heading-container.collapse:not(.show) {
  display: none;
}

@media screen and (max-width: 1080px) {
  .dashboard-navbar .heading {
    font-size: 0.75rem;
  }
}

@media screen and (max-width: 900px) {
  .dashboard-navbar .heading-container {
    justify-content: flex-end;
  }
  .dashboard-navbar .heading {
    display: none;
  }
}

@media screen and (max-width: 575px) {
  .navbar-nav {
    margin: 0 0 0 auto;
  }
  .dashboard-navbar .heading-container {
    flex-direction: column;
    padding-right: 0;
  }
  .darkmode-btn-toggle {
    margin: auto 20px auto auto;
  }
  .navbar-links a.nav-link.selected,
  .navbar-links a.nav-link {
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    width: 90vw;
    text-align: center;
    padding-left: 10px;
  }
  .navbar-links {
    margin: 10px auto;
  }
}

